syntax = "proto3";

option csharp_namespace = "Palantir";

message InitializeApartment {
	ApartmentDefinition definition = 1;
}

message ApartmentDefinition {
	repeated RoomDefinition rooms = 1;
}

message RoomDefinition {
	string id = 1;
	string name = 2;
	string type = 3;
}

message ApartmentInitialized{
}

message IntializeRoom {
	RoomDefinition definition = 1;
}

message RoomInitialzed {
}

message JoinRoom {
	Sender sender = 1;
	string id = 2;
}

message RoomJoined {
	RoomDefinition definition = 1;
}

message Sender {
	string address = 1;
	string id = 2;
}

message ValueChanged {
	string value = 1;
}